# Artemis-Project

./: .env.example  .gitignore  AGENTS.md  README.md  go.mod  go.sum  pyproject.toml
.claude/: settings.local.json
.github/workflows/: coverage.yml  integration-tests.yml  visual-tests.yml
.omc/: project-memory.json
.omc/plans/: open-questions.md  visual-testing-verification.md
.omc/sessions/: 3e8a5219-ad03-49d9-bd6a-95a0436ad69b.json  d5a52451-aa6c-4569-987d-7fef1964fc27.json
.omc/state/: agent-replay-3e8a5219-ad03-49d9-bd6a-95a0436ad69b.jsonl  agent-replay-d5a52451-aa6c-4569-987d-7fef1964fc27.jsonl  idle-notif-cooldown.json  last-tool-error.json  (+2 more)
.sisyphus/: handoff.md
AD_Test/: game.js  index.html
docs/: alpha_dogfooding_runbook.md  alpha_verification_matrix.md  architecture.md  artemis_alpha_plan.md  artemis_mvp1.md  artemis_mvp2.md  artemis_mvp3.md  artemis_mvp4.md  artemis_mvp5.md  artemis_mvp6.md  artemis_planning.md  configuration.md  getting-started.md  handoff-session-36.md  release-v0.1-mvp-baseline.md
scripts/: smoke_alpha_dogfood.py  smoke_api.py  smoke_mvp2_gui.py  smoke_mvp3_gui.py  smoke_mvp4_gui.py  smoke_mvp5_gui.py  smoke_mvp6_gui.py  start_mvp2_services.py  verify_alpha.py
services/: __init__.py
services/agent_backend/: __init__.py  pyproject.toml
services/agent_backend/app/: __init__.py  api.py  config.py  graph.py  llm.py  observability.py  schemas.py  service.py  tools.py
tests/: __init__.py
training/: .gitignore  pyproject.toml  requirements.txt
training/configs/: data_config.yaml  training_config.yaml
training/scripts/: 01_collect.py  02_preprocess.py  03_train.py  04_evaluate.py  05_deploy.py
training/src/: __init__.py
training/src/collect/: bigquery.py  stack_v2.py
training/src/deploy/: merge.py  quantize.py  serve.py
training/src/evaluate/: metrics.py
training/src/preprocess/: dedup.py  format.py  go_ast.py
training/src/train/: fim.py  qlora.py
(+188 files in other folders)
